@@ -300,7 +300,14 @@ static bus_t register_bus(bus_t busnumber, xmlDocPtr doc, xmlNodePtr node)
         else if (xmlStrcmp(child->name, BAD_CAST "verbosity") == 0) {
             txt = xmlNodeListGetString(doc, child->children, 1);
             if (txt != NULL) {
-                buses[current_bus].debuglevel = atoi((char *) txt);
+                int verbosity = atoi((char *) txt);
+                if ((verbosity < 0) || (verbosity > DBG_DEBUG)) {
+                    syslog_bus(current_bus, DBG_ERROR,
+		        "Unvalid verbosity value found: %d; using %d instead",
+			verbosity, DBG_DEBUG);
+		    verbosity = DBG_DEBUG;
+		}
+		buses[current_bus].debuglevel = verbosity;
                 xmlFree(txt);
             }
         }
